tests/ui-nightly/transmute-size-increase.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> tests/ui-nightly/transmute-size-increase.rs:7:32
  |
7 | const SIZE_INCREASE: [u8; 2] = zerocopy::transmute!([0u8; 1]);
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: source type: `[u8; 1]` (8 bits)
  = note: target type: `[u8; 2]` (16 bits)
  = note: this error originates in the macro `zerocopy::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
